--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
-  "author": "jest",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4",
